# myUsefullCode

./: .gitignore  README.md
androidExecutableDemo/: CMakeLists.txt
androidExecutableDemo/script/: run.sh
androidExecutableDemo/src/: compute.cpp
androidExecutableDemo/test/: CMakeLists.txt  test.cpp
armGemm/: CMakeLists.txt  gemm_neon.cpp
armGemm/include/fmath/: matrix.hpp  scalar.hpp  sparse.hpp  vector.hpp
armGemm/include/universal/: config.h  getPrimitiveType.h  half.h  loadFile.h  mtl.h  primtypes.h  status.h  sys.h  timer.h  types.h  uniDataSpec.h  version.h
armGemm/include/universal/cuda/: atomic_cuda.cuh  core_cuda.cuh  simd_functions_cuda.cuh  warp_cuda.cuh
armMath/: armMath.hpp  compile.sh  main.cpp
bin2cpp/: .gitignore  CMakeLists.txt  bin2cpp  bin2cpp.cpp  run.sh
bin2cpp/include/: oclbin.h
bin2cpp/src/: gemm_image.cpp  internal.cpp  internal.h
binary-reader/: BinaryReader.cpp
cl2bin/: CMakeLists.txt  cl2bin.cpp  clCode2Bin.cpp  gemm_image.cl
clInfo/: CMakeLists.txt
clInfo/src/: clInfo.cpp
cmake/: toolchain.cmake
cmake/include/: duration2.hpp  half.hpp  opencl_init.hpp
findKMaxValue/: CMakeLists.txt  findKMaxValue.cpp
fourSum/: CMakeLists.txt  fourSum.cpp
ncnn-test-armv7/: a.out  compile.android.arm64.sh  main.cpp
ncnn-test-armv7/include/ncnn/: platform.h
ncnn-test-armv7/lib.armv7/cmake/ncnn/: ncnn.cmake
ncnn-test-armv7/model/: face.onnx.ncnn.param
ndk-compile/: Android.mk  Application.mk  compile.sh  main.c
oclExample/: CMakeLists.txt  ocl_example.cpp
oclImage/: CMakeLists.txt  bufferVSImage.cpp
oclImageVsBuffer/: bufferVSImage.cpp
oclMapSpeed/: CMakeLists.txt  oclMapSpeed.cpp
oclSpeedCeil/: CMakeLists.txt  README.md  ceil.cpp  compile.sh  test-gpu-peak-flops-android64
opencl_stub/: CMakeLists.txt
opencl_stub/src/: opencl_stub.c
rust-learning-path/hello_world/: main
script/: copy.sh  py.sh  release.sh  run.sh
snpe-test/: CMakeLists.txt  README.md
snpe-test/armv7-include/: CheckRuntime.hpp  ExecuteNetwork.hpp  LoadContainer.hpp  LoadInputTensor.hpp  NV21Load.hpp  SetBuilderOptions.hpp  Util.hpp  udlExample.hpp
snpe-test/armv7-include/zdl/DiagLog/: IDiagLog.hpp  Options.hpp
snpe-test/armv7-include/zdl/DlContainer/: IDlContainer.hpp
snpe-test/armv7-include/zdl/DlSystem/: DlEnums.hpp  DlError.hpp  DlOptional.hpp  DlVersion.hpp  IBufferAttributes.hpp  ITensorFactory.hpp  IUserBuffer.hpp  IUserBufferFactory.hpp  String.hpp  StringList.hpp  TensorMap.hpp  TensorShape.hpp  UDLContext.hpp
snpe-test/armv7-include/zdl/SNPE/: SNPE.hpp  SNPEBuilder.hpp
snpe-test/armv7-src/: CheckRuntime.cpp  ExecuteNetwork.cpp  LoadContainer.cpp  LoadInputTensor.cpp  NV21Load.cpp  SetBuilderOptions.cpp  Util.cpp  main.cpp  udlExample.cpp
snpe-test/src/: CreateUserBuffer.cpp  main.cpp
testEndian/: testEndian.cpp
thread-pool/: a.out  main.cpp  thread_pool.cpp  thread_pool.h
unlock/: unlock.sh
ushort2uchar/: CMakeLists.txt  main.cpp  order_neon.cpp
warpTwoNumberWithoutRegister/: warp_test.cpp
