cmake_minimum_required(VERSION 2.8)
project (cl2bin)

set(CMAKE_SYSTEM_NAME Linux)
set(CMAKE_C_COMPILER   /home/pengcuo/android-toolchains/armv7-4.8/bin/arm-linux-androideabi-gcc)
set(CMAKE_CXX_COMPILER   /home/pengcuo/android-toolchains/armv7-4.8/bin/arm-linux-androideabi-g++)
message(STATUS "cmake_c_compiler--> ${CMAKE_C_COMPILER}")
message(STATUS "cmake_cxx_compiler--> ${CMAKE_CXX_COMPILER}")
set(CMAKE_CXX_FLAGS "-pie -fPIC")
message(STATUS "current_source_dir-> ${CMAKE_CURRENT_SOURCE_DIR}")
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
#link_directories(/usr/local/cuda/lib64)
link_directories(${CMAKE_CURRENT_SOURCE_DIR})
add_executable(cl2bin ${CMAKE_CURRENT_SOURCE_DIR}/clCode2Bin.cpp)
target_link_libraries(cl2bin OpenCL)
